feat: add secure administrator password login
